--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -29,23 +29,23 @@ jobs:
       run: |
         pytest
 
-#   deploy:
-#     runs-on: ubuntu-latest
-#     needs: build
-#     steps:
-#       - name: Deploy to production
-#         uses: actions/checkout@v4
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to production
+        uses: actions/checkout@v4
 
-#       - name: Docker Login
-#         uses: docker/login-action@v2
-#         with:
-#           username: ${{ secrets.DOCKER_HUB_USERNAME }}
-#           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+      - name: Docker Login
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
 
-#       - name: Build and push image
-#         run: |
-#           docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/devops:${{ github.sha }} .
-#           docker push ${{ secrets.DOCKER_HUB_USERNAME }}/devops:${{ github.sha }}
+      - name: Build and push image
+        run: |
+          docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/devops:${{ github.sha }} .
+          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/devops:${{ github.sha }}
 
 #       - name: Deploy to Azure Web App
 #         uses: azure/webapps-deploy@v2
