--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -39,13 +39,13 @@ jobs:
       - name: Docker Login
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and push image
         run: |
-          docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/devops:${{ github.sha }} .
-          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/devops:${{ github.sha }}
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/devops:${{ github.sha }} .
+          docker push ${{ secrets.DOCKER_USERNAME }}/devops:${{ github.sha }}
 
 #       - name: Deploy to Azure Web App
 #         uses: azure/webapps-deploy@v2
