--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -2,32 +2,31 @@ name: devops app
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 jobs:
   build:
-
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v4
-      with:
-        python-version: 3.9
+      - uses: actions/checkout@v4
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.9
 
-    - name: List Files
-      run: |
-        echo "Git Hub Actions Demo"
+      - name: List Files
+        run: |
+          echo "Git Hub Actions Demo"
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-    - name: Run tests
-      run: |
-        pytest
+      - name: Run tests
+        run: |
+          pytest
 
   deploy:
     runs-on: ubuntu-latest
@@ -47,9 +46,9 @@ jobs:
           docker build -t ${{ secrets.DOCKER_USERNAME }}/devops:${{ github.sha }} .
           docker push ${{ secrets.DOCKER_USERNAME }}/devops:${{ github.sha }}
 
-#       - name: Deploy to Azure Web App
-#         uses: azure/webapps-deploy@v2
-#         with:
-#           app-name: 'devops-demo'
-#           publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
-#           images: ${{ secrets.DOCKER_HUB_USERNAME }}/devops:${{ github.sha }}
+      - name: Deploy to Azure Web App
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: "devops-demo"
+          publish-profile: ${{ secrets.AZURE_SECRET }}
+          images: ${{ secrets.DOCKER_USERNAME }}/devops:${{ github.sha }}
