--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -49,6 +49,6 @@ jobs:
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v2
         with:
-          app-name: "devops-demo"
+          app-name: "patriq"
           publish-profile: ${{ secrets.AZURE_SECRET }}
           images: ${{ secrets.DOCKER_USERNAME }}/devops:${{ github.sha }}
